Start mapping config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=academy-system
+spring.datasource.url=jdbc:postgresql://localhost:5432/code_up_academic_system_db
+spring.datasource.username=postgres
+spring.datasource.password=db_LocalPass1
+spring.datasource.driver-class-name=org.postgresql.Driver
